Add keepalive by default

--- a/wg.def.sample
+++ b/wg.def.sample
@@ -2,6 +2,7 @@ _INTERFACE=wg0
 _OUTBOUND_INTERFACE=eth0
 _VPN_NET=192.168.99.0/24
 _DNS_SERVERS=1.1.1.1,1.0.0.1
+_KEEPALIVE=25
 _SERVER_PORT=51820
 _SERVER_LISTEN=wg.example.com:$_SERVER_PORT
 _SERVER_PUBLIC_KEY=
